--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -7,7 +7,7 @@
     </ion-buttons>
     <ion-title>{{ 'PROFILE.EDIT_PROFILE' | translate }}</ion-title>
     <ion-buttons slot="end">
-              <ion-button (click)="saveProfile()" fill="clear" [disabled]="!displayName">
+      <ion-button (click)="saveProfile()" fill="clear" [disabled]="!displayName">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -16,61 +16,68 @@
 
 <ion-content class="ion-padding">
   @if (isAuthenticated()) {
-    <ion-card class="profile-form-card">
-      <ion-card-content>
-        <div class="avatar-section">
-          <ion-avatar class="profile-avatar avatar-large">
-            @if (photoURL) {
-              <img 
-                [src]="photoURL" 
-                appImageFallback
-                [fallbackIcon]="'person'"
-                [fallbackSize]="'large'">
-            } @else {
-              <ion-icon name="person" size="large"></ion-icon>
-            }
-          </ion-avatar>
-          <ion-button fill="clear" size="small" class="change-avatar-btn" (click)="changeProfilePhoto()">
-            <ion-icon name="camera" slot="icon-only"></ion-icon>
-          </ion-button>
+    <div class="profile-container">
+      <!-- First line: Photo and Name/Address -->
+      <div class="profile-header">
+        <ion-avatar class="profile-avatar avatar-large">
+          @if (photoURL) {
+            <img 
+              [src]="photoURL" 
+              appImageFallback
+              [fallbackIcon]="'person'"
+              [fallbackSize]="'large'">
+          } @else {
+            <ion-icon name="person" size="large"></ion-icon>
+          }
+        </ion-avatar>
+        <div class="profile-info">
+          <div class="profile-name">{{ displayName || 'Anonymous' }}</div>
+          <div class="profile-email">{{ email }}</div>
         </div>
+        <ion-button fill="clear" size="small" class="change-avatar-btn" (click)="changeProfilePhoto()">
+          <ion-icon name="camera" slot="icon-only"></ion-icon>
+        </ion-button>
+      </div>
 
-        <form class="profile-form">
-          <ion-item class="form-item">
-            <ion-label position="stacked">{{ 'PROFILE.DISPLAY_NAME' | translate }}</ion-label>
-            <ion-input 
-              [(ngModel)]="displayName" 
-              name="displayName"
-              type="text"
-              placeholder="{{ 'PROFILE.DISPLAY_NAME_PLACEHOLDER' | translate }}"
-              required>
-            </ion-input>
-          </ion-item>
+      <!-- Form fields below -->
+      <ion-card class="profile-form-card">
+        <ion-card-content>
+          <form class="profile-form">
+            <ion-item class="form-item">
+              <ion-label position="stacked">{{ 'PROFILE.DISPLAY_NAME' | translate }}</ion-label>
+              <ion-input 
+                [(ngModel)]="displayName" 
+                name="displayName"
+                type="text"
+                placeholder="{{ 'PROFILE.DISPLAY_NAME_PLACEHOLDER' | translate }}"
+                required>
+              </ion-input>
+            </ion-item>
 
-          <ion-item class="form-item">
-            <ion-label position="stacked">{{ 'PROFILE.EMAIL' | translate }}</ion-label>
-            <ion-input 
-              [value]="email" 
-              name="email"
-              type="email"
-              readonly>
-            </ion-input>
-            <ion-note slot="helper">{{ 'PROFILE.EMAIL_READONLY' | translate }}</ion-note>
-          </ion-item>
+            <ion-item class="form-item">
+              <ion-label position="stacked">{{ 'PROFILE.EMAIL' | translate }}</ion-label>
+              <ion-input 
+                [value]="email" 
+                name="email"
+                type="email"
+                readonly>
+              </ion-input>
+              <ion-note slot="helper">{{ 'PROFILE.EMAIL_READONLY' | translate }}</ion-note>
+            </ion-item>
 
-          <ion-item class="form-item">
-            <ion-label position="stacked">{{ 'PROFILE.PHOTO_URL' | translate }}</ion-label>
-            <ion-input 
-              [(ngModel)]="photoURL" 
-              name="photoURL"
-              type="url"
-              placeholder="{{ 'PROFILE.PHOTO_URL_PLACEHOLDER' | translate }}">
-            </ion-input>
-          </ion-item>
-
-        </form>
-      </ion-card-content>
-    </ion-card>
+            <ion-item class="form-item">
+              <ion-label position="stacked">{{ 'PROFILE.PHOTO_URL' | translate }}</ion-label>
+              <ion-input 
+                [(ngModel)]="photoURL" 
+                name="photoURL"
+                type="url"
+                placeholder="{{ 'PROFILE.PHOTO_URL_PLACEHOLDER' | translate }}">
+              </ion-input>
+            </ion-item>
+          </form>
+        </ion-card-content>
+      </ion-card>
+    </div>
   } @else {
     <ion-card class="auth-required-card">
       <ion-card-content>
