--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -169,7 +169,7 @@
     }
 
     .project-media {
-      margin: 0 0 16px;
+      margin-top: 12px;
       
       .media-grid {
         display: grid;
