--- a/src/global.scss
+++ b/src/global.scss
@@ -87,7 +87,7 @@ ion-content .inner-scroll {
 
 
 .dark {
-  --app-background: #1a1a1a;
+  --app-background: #000000;
   --app-text: #ffffff;
   --app-card-background: #2d2d2d;
   --app-card-border: #404040;
