--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -257,8 +257,8 @@
     hasCollaborationRequest(project())) {
     <div class="pending-request-section">
       <div class="pending-request-message">
-        <ion-icon name="time-outline"></ion-icon>
-        <span>{{ "HOME.COLLABORATION_REQUEST_PENDING" | translate }}</span>
+        <ion-icon name="time-outline" class="pending-icon"></ion-icon>
+        <span class="pending-text">{{ "HOME.COLLABORATION_REQUEST_PENDING" | translate }}</span>
       </div>
     </div>
     }
